...
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/_item_type_divider"
        android:background="#FF536DFE"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"/>


...
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/_name"
                android:layout_gravity="start|center_vertical"/>


        </LinearLayout>
        <!-- Surface View End -->
    </com.daimajia.swipe.SwipeLayout>
...
