...
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SearchView
                android:id="@+id/_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="_search_onClick"
                android:layout_weight="1">

...
            android:id="@+id/_itemView"/>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_check"
...
