...
    android:layout_height="match_parent">


    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/_name"
        android:textSize="15sp"
        android:textAlignment="textStart" />
</LinearLayout>
