<resources>
    <string name="app_name">GroceryListManager</string>
    <string name="action_settings">Fall 2016 Team 59</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_all">SELECT ALL</string>
    <string name="deselect_all">DESELECT ALL</string>
    <string name="remove">Remove</string>
    <string name="trash">trash</string>
    <string name="back">back</string>
    <string name="menu">Menu</string>
    <string name="select_items">Select Items</string>
    <string name="select_type">Select Type</string>
...
