...
            android:layout_height="wrap_content">

            <Button
                android:text="@string/clear_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/_deselect"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:onClick="_deselect_onClick" />

            <ImageView
                android:contentDescription="@string/trash"
...
